# comp-3400-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  general-description.docx  terminal_ui.txt
include/: Date.hpp  Doctor.hpp  Employee.hpp  Hospital.hpp  Nurse.hpp  Patient.hpp  Pharmacy.hpp  Setup.hpp
src/: Date.cpp  Doctor.cpp  Employee.cpp  Hospital.cpp  Main.cpp  Nurse.cpp  Patient.cpp  Pharmacy.cpp  Setup.cpp
